# cpu_hard_shadow_renderer

./: .gitignore
cpu_hard_shadow_renderer/: cpu_hard_shadow_renderer.sln
cpu_hard_shadow_renderer/cpu_hard_shadow_renderer/: common.h  cpu_hard_shadow_renderer.vcxproj  cpu_hard_shadow_renderer.vcxproj.filters  main.cpp  mesh.cpp  model_loader.cpp  ppc.cpp  ppc.h
cpu_hard_shadow_renderer/cpu_hard_shadow_renderer/Debug/: vc141.idb
cpu_hard_shadow_renderer/cpu_hard_shadow_renderer/Debug/cpu_hard.0A5F1360.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpu_hard_shadow_renderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpu_hard_shadow_renderer_src/: .main.cu.swp  CMakeLists.txt  common.h  generate_benchmark_script.py  main.cpp  main.cu  model_loader.h  ppc.cpp  ppc.h  render.sh  render2.sh  render_benchmark.sh  render_benchmark1.sh  render_benchmark2.sh  render_benchmark3.sh  render_benchmark4.sh  render_dataset.py  render_general.sh  render_general2.sh  render_general3.sh  run.sh
general_models/: door_0052_normalize.off  person_0071_normalize.off  toilet_0071_normalize.off  toilet_0089_normalize.off
